2017-05-19  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r28438.

	* nasl/nasl_crypto.c (nasl_nt_owf_gen): Fix memory leak. Improve code
	style. Fix calculation for inputs of more than 64 characters.

2017-05-17  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28407. With adjustments due to code changes.

	* nasl/nasl_crypto.c (nasl_nt_owf_gen): Replace code to convert
	ascii to unicode with g_utf8_to_utf16 to support special characters.

2017-05-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r28399.

	* misc/network.c (open_stream_connection): Add RC4 to the default
	priority strings as it is disabled in newer versions.
	(set_gnutls_protocol): Remove outdated comment.

2017-05-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r28394.

	* nasl/nasl_builtin_find_service.c (plugin_do_run): Change default
	number of parallel connections to 6 to match the default one in
	find_service.nasl.

2017-05-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r28378.

	* nasl/nasl_builtin_find_service.c (plugin_do_run): Increase rw_timeout
	and wrap_timeout to match cnx_timeout.

2017-05-10  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r25570, r25578, r25579, r25651, r25652, r25703, r25704
	r25731, r26270, r26296,r26305, r26322, r26330, r26944, r27843, r27854
	r27928, r28000, r28029, r28093, r27651, r28187. With adjustments due to
	code changes.
	Add SSL/TLS cryptography implementations.

	* nasl/nals.c (gcrypt_init): New function to initilalize libgcrypt.
	(main): Calls gcrypt_init().

	* nasl/nasl_crypto.c (nasl_hmac_sha256): Take only data and key
	parameters.Constify parameters.
	(nasl_prf_sha256): New functions. Call nasl_prf().
	(prf_sha256): New functions. Fix memory leak. Use correct buffer length.
	Rename to tls_prf(). Add hmac parameter.
	(hmac_sha512, nasl_hmac_sha512): New functions.
	nasl_hmac_sha384): New function.
	(hmac_sha512): Remove function.
	(nasl_hmac_sha512): Use nasl_hmac().